@@ -1,4 +1,13 @@
-package com.nsbm.health.appointment.service.impl;
+/* =========================================================
+   AppointmentServiceImpl.java
+   - Business logic for appointment booking
+   - Key rules:
+     1) Book -> calls availabilityClient.bookSlot() then saves appointment
+     2) Cancel -> calls availabilityClient.releaseSlot(oldSlot) then marks CANCELLED
+     3) Reschedule -> release old slot -> book new slot -> update appointment
+   - Stores userName ONLY (no userId)
+   ========================================================= */
+        package com.nsbm.health.appointment.service.impl;
 
 import com.nsbm.health.appointment.client.AvailabilityClient;
 import com.nsbm.health.appointment.client.dto.AvailabilityResponse;
@@ -15,28 +24,12 @@ import com.nsbm.health.appointment.service.AppointmentService;
 import com.nsbm.health.appointment.util.AppointmentMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.dao.DuplicateKeyException;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * Business logic for appointment booking, cancellation, rescheduling and retrieval.
- *
- * Inter-service communication:
- * - Calls AvailabilityClient.bookSlot() which sends PUT /api/v1/availability/{id}/book
- *   to the Availability Management Service running on port 8082.
- * - This is done for both booking and rescheduling to lock the slot.
- * - If the availability service is unreachable, AvailabilityServiceException is thrown
- *   and no appointment is created (returns 503 to client).
- *
- * Double-booking prevention:
- * Layer 1 - existsByAvailabilityId() check before calling availability service.
- * Layer 2 - MongoDB unique index on availabilityId catches concurrent race conditions.
- */
 @Service
 public class AppointmentServiceImpl implements AppointmentService {
 
@@ -51,11 +44,17 @@ public class AppointmentServiceImpl implements AppointmentService {
         this.availabilityClient = availabilityClient;
     }
 
+    /* ---------------------------------------------------------
+       BOOK APPOINTMENT
+       - Ensures we don't double-book by availabilityId
+       - Locks slot in availability service
+       - Saves appointment in Mongo
+    ---------------------------------------------------------- */
     @Override
     public AppointmentResponse bookAppointment(BookAppointmentRequest request) {
-        log.info("Booking appointment - userId={}, availabilityId={}", request.getUserId(), request.getAvailabilityId());
+        log.info("Booking appointment - userName={}, availabilityId={}", request.getUserName(), request.getAvailabilityId());
 
-        if (appointmentRepository.existsByAvailabilityId(request.getAvailabilityId())) {
+        if (appointmentRepository.existsByAvailabilityIdAndStatusNot(request.getAvailabilityId(), AppointmentStatus.CANCELLED)) {
             throw new DuplicateBookingException("Slot " + request.getAvailabilityId() + " is already booked.");
         }
 
@@ -63,7 +62,7 @@ public class AppointmentServiceImpl implements AppointmentService {
 
         Appointment appointment = new Appointment(
                 slot.getAvailabilityId(),
-                request.getUserId(),
+                request.getUserName(),
                 slot.getCounselorId(),
                 slot.getDate(),
                 slot.getStartTime(),
@@ -73,20 +72,33 @@ public class AppointmentServiceImpl implements AppointmentService {
         appointment.setCreatedAt(Instant.now());
         appointment.setUpdatedAt(Instant.now());
 
-        try {
-            Appointment saved = appointmentRepository.save(appointment);
-            log.info("Appointment created - id={}", saved.getId());
-            return AppointmentMapper.toResponse(saved);
-        } catch (DuplicateKeyException e) {
-            throw new DuplicateBookingException("Slot " + request.getAvailabilityId() + " was taken by a concurrent request.");
-        }
+        Appointment saved = appointmentRepository.save(appointment);
+        return AppointmentMapper.toResponse(saved);
     }
 
+    /* ---------------------------------------------------------
+       CANCEL APPOINTMENT
+       - Releases slot in availability service
+       - Marks appointment CANCELLED
+    ---------------------------------------------------------- */
     @Override
     public AppointmentResponse cancelAppointment(String appointmentId, CancelAppointmentRequest request) {
         log.info("Cancelling appointment - id={}", appointmentId);
 
         Appointment appointment = findOrThrow(appointmentId);
+
+        // Cannot cancel an already cancelled appointment
+        if (appointment.getStatus() == AppointmentStatus.CANCELLED) {
+            throw new IllegalArgumentException("Appointment is already cancelled.");
+        }
+
+        // Release the slot so others can book it again (best-effort)
+        try {
+            availabilityClient.releaseSlot(appointment.getAvailabilityId());
+        } catch (Exception releaseEx) {
+            log.warn("Could not release slot {} (may already be released): {}", appointment.getAvailabilityId(), releaseEx.getMessage());
+        }
+
         appointment.setStatus(AppointmentStatus.CANCELLED);
         appointment.setUpdatedAt(Instant.now());
 
@@ -97,17 +109,55 @@ public class AppointmentServiceImpl implements AppointmentService {
         return AppointmentMapper.toResponse(appointmentRepository.save(appointment));
     }
 
+    /* ---------------------------------------------------------
+       RESCHEDULE APPOINTMENT
+       - Validates appointment is not cancelled
+       - Releases old slot
+       - Books new slot (with rollback on failure)
+       - Updates appointment with new slot details
+    ---------------------------------------------------------- */
     @Override
     public AppointmentResponse rescheduleAppointment(String appointmentId, RescheduleAppointmentRequest request) {
         log.info("Rescheduling appointment - id={}, newAvailabilityId={}", appointmentId, request.getNewAvailabilityId());
 
         Appointment appointment = findOrThrow(appointmentId);
 
-        if (appointmentRepository.existsByAvailabilityId(request.getNewAvailabilityId())) {
+        // Cannot reschedule a cancelled appointment
+        if (appointment.getStatus() == AppointmentStatus.CANCELLED) {
+            throw new IllegalArgumentException("Cannot reschedule a cancelled appointment. Please book a new one.");
+        }
+
+        String oldAvailabilityId = appointment.getAvailabilityId();
+
+        // Cannot reschedule to the same slot
+        if (oldAvailabilityId.equals(request.getNewAvailabilityId())) {
+            throw new IllegalArgumentException("New slot is the same as the current slot.");
+        }
+
+        if (appointmentRepository.existsByAvailabilityIdAndStatusNot(request.getNewAvailabilityId(), AppointmentStatus.CANCELLED)) {
             throw new DuplicateBookingException("New slot " + request.getNewAvailabilityId() + " is already booked.");
         }
 
-        AvailabilityResponse newSlot = availabilityClient.bookSlot(request.getNewAvailabilityId());
+        // Release old slot first (best-effort: if already released, just log and continue)
+        try {
+            availabilityClient.releaseSlot(oldAvailabilityId);
+        } catch (Exception releaseEx) {
+            log.warn("Could not release old slot {} (may already be released): {}", oldAvailabilityId, releaseEx.getMessage());
+        }
+
+        // Book new slot — if this fails, rollback by re-booking the old slot
+        AvailabilityResponse newSlot;
+        try {
+            newSlot = availabilityClient.bookSlot(request.getNewAvailabilityId());
+        } catch (Exception e) {
+            log.error("Failed to book new slot, rolling back old slot release: {}", e.getMessage());
+            try {
+                availabilityClient.bookSlot(oldAvailabilityId);
+            } catch (Exception rollbackEx) {
+                log.error("Rollback also failed for old slot {}: {}", oldAvailabilityId, rollbackEx.getMessage());
+            }
+            throw e;
+        }
 
         appointment.setAvailabilityId(newSlot.getAvailabilityId());
         appointment.setCounselorId(newSlot.getCounselorId());
@@ -117,37 +167,35 @@ public class AppointmentServiceImpl implements AppointmentService {
         appointment.setStatus(AppointmentStatus.RESCHEDULED);
         appointment.setUpdatedAt(Instant.now());
 
-        try {
-            return AppointmentMapper.toResponse(appointmentRepository.save(appointment));
-        } catch (DuplicateKeyException e) {
-            throw new DuplicateBookingException("New slot " + request.getNewAvailabilityId() + " was taken by a concurrent request.");
-        }
+        return AppointmentMapper.toResponse(appointmentRepository.save(appointment));
     }
 
+    /* ---------------------------------------------------------
+       QUERY: BY userName
+    ---------------------------------------------------------- */
     @Override
-    public List<AppointmentResponse> getAppointmentsByUserId(String userId) {
-        return appointmentRepository.findByUserId(userId)
+    public List<AppointmentResponse> getAppointmentsByUserName(String userName) {
+        return appointmentRepository.findByUserName(userName)
                 .stream()
                 .map(AppointmentMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Override
-    public List<AppointmentResponse> getAppointmentsByCounselorId(String counselorId) {
-        return appointmentRepository.findByCounselorId(counselorId)
-                .stream()
-                .map(AppointmentMapper::toResponse)
-                .collect(Collectors.toList());
-    }
 
+    /* ---------------------------------------------------------
+       PROXY: available slots by date
+       - calls availability service
+    ---------------------------------------------------------- */
     @Override
     public List<AvailabilityResponse> getAvailableSlotsByDate(LocalDate date) {
         return availabilityClient.getAvailableSlotsByDate(date);
     }
 
+    /* ---------------------------------------------------------
+       Helper: find appointment or throw 404-style exception
+    ---------------------------------------------------------- */
     private Appointment findOrThrow(String id) {
         return appointmentRepository.findById(id)
                 .orElseThrow(() -> new AppointmentNotFoundException("Appointment not found: " + id));
     }
-
 }
